--- a/src/app/admin-hotel-model/admin-index/admin-index.component.html
+++ b/src/app/admin-hotel-model/admin-index/admin-index.component.html
@@ -16,8 +16,14 @@
   </div>
 
 
+
   <p class="d-flex justify-content-center" *ngIf="isAdmin">
     <a class="btn btn-outline-light" routerLink="/admin-create-edit">Create New</a>
+</p>
+<p class="d-flex justify-content-center" *ngIf="!isAdmin">
+  <a class="btn btn-outline-secondary" id="check-weather-btn" data-bs-toggle="modal" data-bs-target="#weatherModal" style="color:white;">
+    Weather <i class="fa-solid fa-cloud"></i>
+  </a>
 </p>
 
 
